# pathtracer

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist  README.md
scripts/: build.sh  clean.sh  debug.sh  run.sh
shaders/: Shader.metal  bsdf.metal  intersection.metal  kernel.metal  rng.metal  types.Metal  types.metal
src/: Camera.h  Config.h  Material.h  MovementHandler.cpp  MovementHandler.h  ObjLoader.cpp  ObjLoader.h  Object.h  Renderer.cpp  Renderer.h  WindowHelper.mm  main.cpp
src/Bvh/: BvhBuilder.h  BvhNode.h
src/Primitives/: Primitives.h  ScenePrimitives.h
